# entt-cereal-mvp

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/cereal/: cereal.hpp
src/cereal/archives/: xml.hpp
src/cereal/details/: polymorphic_impl.hpp  static_object.hpp  traits.hpp
src/cereal/types/: polymorphic.hpp  tuple.hpp
